Bugfix: page number was missing on the search pagination on narrow display.

--- a/cotr/static/scss/main.scss
+++ b/cotr/static/scss/main.scss
@@ -1079,3 +1079,9 @@ main {
 .v6-text-id {
   border-left: 10px solid $reddish-purple;
 }
+
+//
+
+.pagination .page-number {
+  display: inline-block;
+}
